--- a/packages/aws-udagram-frontend/src/app/feed/feed-upload/feed-upload-button/feed-upload-button.component.html
+++ b/packages/aws-udagram-frontend/src/app/feed/feed-upload/feed-upload-button/feed-upload-button.component.html
@@ -2,6 +2,6 @@
   color="primary" 
   type="submit"
   [disabled]="!isLoggedIn"
-  (click)="presentUploadForm($event)">
+  (click)="presentUploadForm()">
   Create a New Post
 </ion-button>
